added many endpoints as I decouple functions from the web UI